<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_centerInParent="true"
  android:baselineAligned="false"
  android:orientation="horizontal">

  <LinearLayout
    android:id="@+id/innerLinearLayout1RowA"
    android:layout_width="0dip"
    android:layout_height="wrap_content"
    android:layout_weight="50"
    android:orientation="vertical">

    <Button
      android:id="@+id/btn_sound1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/button_sound1" />

    <Button
      android:id="@+id/btn_sound3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/button_sound3" />

    <Button
      android:id="@+id/btn_sound5"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/button_sound5" />

    <Button
      android:id="@+id/btn_sound7"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/button_sound7" />

    <Button
      android:id="@+id/btn_sound9"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/button_sound9" />

    <Button
      android:id="@+id/btn_sound11"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_vertical|center_horizontal"
      android:text="@string/button_sound11" />
  </LinearLayout>

  <LinearLayout
    android:id="@+id/innerLinearLayout1RowB"
    android:layout_width="0dip"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_weight="50"
    android:orientation="vertical">

    <Button
      android:id="@+id/btn_sound2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/button_sound2" />

    <Button
      android:id="@+id/btn_sound4"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:text="@string/button_sound4" />

    <Button
      android:id="@+id/btn_sound6"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/button_sound6" />

    <Button
      android:id="@+id/btn_sound8"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/button_sound8" />

    <Button
      android:id="@+id/btn_sound10"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/button_sound10" />

    <Button
      android:id="@+id/btn_sound12"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/button_sound12" />
  </LinearLayout>
</LinearLayout>
